internal/gatewayapi/testdata/sds.in.yaml
envoyProxyForGatewayClass:
  apiVersion: gateway.envoyproxy.io/v1alpha1
  kind: EnvoyProxy
  metadata:
    namespace: envoy-gateway-system
    name: test
  spec:
    backendTLS:
      clientCertificateRef:
        kind: Secret
        name: sds-client-cert-default
      alpnProtocols:
        # without this, need to enforce mTLS with PeerAuthentication
        - istio
gateways:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: Gateway
    metadata:
      namespace: envoy-gateway
      name: gateway-1
    spec:
      gatewayClassName: envoy-gateway-class
      listeners:
        - name: http
          protocol: HTTP
          port: 80
          allowedRoutes:
            namespaces:
              from: All
backends:
  - apiVersion: gateway.envoyproxy.io/v1alpha1
    kind: Backend
    metadata:
      name: spire-uds
      namespace: envoy-gateway-system
    spec:
      endpoints:
        - unix:
            path: /var/run/secrets/workload-spiffe-uds/socket
      type: Endpoints
backendTLSPolicies:
  - apiVersion: gateway.networking.k8s.io/v1alpha2
    kind: BackendTLSPolicy
    metadata:
      name: policy-btls
      namespace: default
    spec:
      targetRefs:
        - kind: Service
          name: service-1
      validation:
        caCertificateRefs:
          - name: sds-client-cert-rootca
            kind: Secret
        hostname: example.com
httpRoutes:
  - apiVersion: gateway.networking.k8s.io/v1
    kind: HTTPRoute
    metadata:
      name: httproute-1
      namespace: default
    spec:
      parentRefs:
        - namespace: envoy-gateway
          name: gateway-1
          sectionName: http
      rules:
        - matches:
            - path:
                type: Exact
                value: "/exact"
          backendRefs:
            - name: service-1
              port: 8080
secrets:
  - apiVersion: v1
    kind: Secret
    metadata:
      name: sds-client-cert-default
      namespace: envoy-gateway-system
    type: gateway.envoyproxy.io/sds
    data:
      # unix:///var/run/secrets/workload-spiffe-uds/socket
      url: dW5peDovLy92YXIvcnVuL3NlY3JldHMvd29ya2xvYWQtc3BpZmZlLXVkcy9zb2NrZXQ=
      secretName: ZGVmYXVsdA==  # base64 for "default"
  - apiVersion: v1
    kind: Secret
    metadata:
      name: sds-client-cert-rootca
      namespace: default
    type: gateway.envoyproxy.io/sds
    data:
      # unix:///var/run/secrets/workload-spiffe-uds/socket
      url: dW5peDovLy92YXIvcnVuL3NlY3JldHMvd29ya2xvYWQtc3BpZmZlLXVkcy9zb2NrZXQ=
      secretName: Uk9PVENB  # base64 for "ROOTCA"
